      buildLabel was set to conary.example.com@rpl:devel, you would be
      prompted to enter a passphrase even when cooking locally to the
      local@local:COOK label.
    * Dependency resolution will no longer cause a trove to switch branches.
    * If a component is kept when performing dep resolution because it is
      still needed, it's package will be kept as well if possible.

 o Build fixes:
    * Group cooking now produces output to make it easier to tell what
      is happening.  The --debug flag can be used to get a more 
      detailed log of what troves are being included.

Changes in 1.0.6:
 o Repository changes:
    * The commitaction script now accepts the standard conary arguments
      --config and --config-file.

 o Bugfixes:
    * cvc merge on a non-shadow no longer returns a traceback (bz# 792),
      and cvc context foo does not return a traceback when context foo does
      not exist (bz #757)  Fixed by David Coulthart.
    * A bug that caused new OpenPGP keys to be skipped when troves
      were filtered out during mirroring has been fixed.
    * opening invalid changesets now gives a good error message instead of
      a traceback
    * removed obsolete changemail script
    * Exceptions which display fileId's display them as hex sha1s now
      instead of as python strings
    * A bug where including a redirect in a group that has autoResolve 
      caused conary to traceback has been fixed.
    * A bug that kept conary from prompting for your password when committing
      has been fixed.
    * A bug that randomized the order of the labels in the  installLabelPath 
      in some error messages has been fixed.

 o Build fixes:
    * The default ComponentSpec for :perl components now include files
      in site_perl as well as in vendor_perl.
    * Ruby uses /usr/share/ri for its documentation system, so all files
      in %(datadir)s/ri are now included in the default :doc ComponentSpec.

Changes in 1.0.5:
 o Performance improvements: